--- a/prijateli_tree/app/templates/admin_login.html
+++ b/prijateli_tree/app/templates/admin_login.html
@@ -10,19 +10,19 @@
           <div class="mb-3 row">
             <label for="first_name" class="col-sm-3 col-form-label">First Name:</label>
             <div class="col-sm-9">
-              <input type="text" class="form-control" id="first_name" name="first_name">
+              <input type="text" class="form-control" id="first_name" name="first_name" required>
             </div>
           </div>
           <div class="mb-3 row">
             <label for="last_name" class="col-sm-3 col-form-label">Last Name:</label>
             <div class="col-sm-9">
-              <input type="text" class="form-control" id="last_name" name="last_name">
+              <input type="text" class="form-control" id="last_name" name="last_name" required>
             </div>
           </div>
           <div class="mb-3 row">
             <label for="email" class="col-sm-3 col-form-label">Email:</label>
             <div class="col-sm-9">
-              <input type="email" class="form-control" id="email" name="email">
+              <input type="email" class="form-control" id="email" name="email" required>
             </div>
           </div>
           <button type="submit" class="btn btn-primary">Login</button>
