--- a/prijateli_tree/app/templates/admin_dashboard.html
+++ b/prijateli_tree/app/templates/admin_dashboard.html
@@ -16,10 +16,9 @@
   <div class="container-fluid">
     <div class="row">
       <div class="offset-md-1 col-md-10 offset-xl-2 col-xl-8 table-container">
-        <button type="button"
-                class="btn btn-primary btn-sm"
-                data-bs-toggle="modal"
-                data-bs-target="#new-game">New Game</button>
+        <a class="btn btn-primary btn-sm"
+           href="{{ url_for("dashboard_create_game") }}"
+           role="button">New Game</a>
         <table id="games" class="table table-hover table-bordered caption-top">
           <caption>List of Games</caption>
           <thead>
@@ -139,115 +138,6 @@
             {% endfor %}
           </tbody>
         </table>
-      </div>
-    </div>
-  </div>
-  <!-- Modal -->
-  <div class="modal fade" id="new-game" tabindex="-1" aria-hidden="true">
-    <div class="modal-dialog">
-      <div class="modal-content">
-        <div class="modal-header">
-          <h1 class="modal-title fs-5" id="exampleModalLabel">Create New Game</h1>
-          <button type="button"
-                  class="btn-close"
-                  data-bs-dismiss="modal"
-                  aria-label="Close"></button>
-        </div>
-        <form method="post" action='{{ url_for("create_game") }}'>
-          <div class="modal-body">
-            <div class="mb-3 row">
-              <label for="game-type" class="col-sm-4 col-form-label">Game Type</label>
-              <div class="col-sm-8">
-                <select id="game-type" class="form-select form-select-sm" name="game_type">
-                  {% for gt in game_types|sort(attribute='network, bag') %}
-                    <option value="{{ gt.id }}">{{ gt.network|title }} with bag: {{ gt.bag }}</option>
-                  {% endfor %}
-                </select>
-              </div>
-            </div>
-            <div class="mb-3 row">
-              <label for="num-rounds" class="col-sm-4 col-form-label">Number of Rounds</label>
-              <div class="col-sm-8">
-                <input type="number"
-                       min="1"
-                       step="1"
-                       max="50"
-                       class="form-control form-control-sm"
-                       value="1"
-                       id="num-rounds"
-                       name="rounds">
-              </div>
-            </div>
-            <div class="mb-3 row">
-              <label for="pos-one" class="col-sm-4 form-label">Position One</label>
-              <div class="col-sm-8">
-                <select id="pos-one" class="form-select form-select-sm" name="pos_one">
-                  {% for s in students|sort(attribute='last_name') %}
-                    <option value="{{ s.id }}">{{ s.first_name|title }} {{ s.last_name|title }} ({{ s.language.abbr }})</option>
-                  {% endfor %}
-                </select>
-              </div>
-            </div>
-            <div class="mb-3 row">
-              <label for="pos-two" class="col-sm-4 form-label">Position Two</label>
-              <div class="col-sm-8">
-                <select id="pos-two" class="form-select form-select-sm" name="pos_two">
-                  {% for s in students|sort(attribute='last_name') %}
-                    <option value="{{ s.id }}">{{ s.first_name|title }} {{ s.last_name|title }} ({{ s.language.abbr }})</option>
-                  {% endfor %}
-                </select>
-              </div>
-            </div>
-            <div class="mb-3 row">
-              <label for="pos-three" class="col-sm-4 form-label">Position Three</label>
-              <div class="col-sm-8">
-                <select id="pos-three" class="form-select form-select-sm" name="pos_three">
-                  {% for s in students|sort(attribute='last_name') %}
-                    <option value="{{ s.id }}">{{ s.first_name|title }} {{ s.last_name|title }} ({{ s.language.abbr }})</option>
-                  {% endfor %}
-                </select>
-              </div>
-            </div>
-            <div class="mb-3 row">
-              <label for="pos-four" class="col-sm-4 form-label">Position Four</label>
-              <div class="col-sm-8">
-                <select id="pos-four" class="form-select form-select-sm" name="pos_four">
-                  {% for s in students|sort(attribute='last_name') %}
-                    <option value="{{ s.id }}">{{ s.first_name|title }} {{ s.last_name|title }} ({{ s.language.abbr }})</option>
-                  {% endfor %}
-                </select>
-              </div>
-            </div>
-            <div class="mb-3 row">
-              <label for="pos-five" class="col-sm-4 form-label">Position Five</label>
-              <div class="col-sm-8">
-                <select id="pos-five"
-                        class="col-sm-4 form-select form-select-sm"
-                        name="pos_five">
-                  {% for s in students|sort(attribute='last_name') %}
-                    <option value="{{ s.id }}">{{ s.first_name|title }} {{ s.last_name|title }} ({{ s.language.abbr }})</option>
-                  {% endfor %}
-                </select>
-              </div>
-            </div>
-            <div class="mb-3 row">
-              <label for="pos-six" class="col-sm-4 form-label">Position Six</label>
-              <div class="col-sm-8">
-                <select id="pos-six"
-                        class="col-sm-4 form-select form-select-sm"
-                        name="pos_six">
-                  {% for s in students|sort(attribute='last_name') %}
-                    <option value="{{ s.id }}">{{ s.first_name|title }} {{ s.last_name|title }} ({{ s.language.abbr }})</option>
-                  {% endfor %}
-                </select>
-              </div>
-            </div>
-          </div>
-          <div class="modal-footer">
-            <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-            <button type="submit" class="btn btn-primary">Create</button>
-          </div>
-        </form>
       </div>
     </div>
   </div>
