--- a/prijateli_tree/app/templates/admin_dashboard.html
+++ b/prijateli_tree/app/templates/admin_dashboard.html
@@ -17,7 +17,7 @@
     <div class="row">
       <div class="offset-md-1 col-md-10 offset-xl-2 col-xl-8 table-container">
         <a class="btn btn-primary btn-sm"
-           href="{{ url_for("dashboard_create_game") }}"
+           href='{{ url_for("dashboard_create_game") }}'
            role="button">New Game</a>
         <table id="games" class="table table-hover table-bordered caption-top">
           <caption>List of Games</caption>
