--- a/prijateli_tree/app/templates/admin_dashboard.html
+++ b/prijateli_tree/app/templates/admin_dashboard.html
@@ -13,6 +13,15 @@
   </script>
 {% endblock helper_script %}
 {% block content %}
+  {% if success %}
+    <div class="alert alert-success alert-dismissible fade show" role="alert">
+      <strong>Success:</strong> {{ success }}
+      <button type="button"
+              class="btn-close"
+              data-bs-dismiss="alert"
+              aria-label="Close"></button>
+    </div>
+  {% endif %}
   <div class="container-fluid">
     <div class="row">
       <div class="offset-md-1 col-md-10 offset-xl-2 col-xl-8 table-container">
