--- a/prijateli_tree/app/templates/admin_dashboard.html
+++ b/prijateli_tree/app/templates/admin_dashboard.html
@@ -13,13 +13,21 @@
   </script>
 {% endblock helper_script %}
 {% block content %}
+  {% if success %}
+    <div class="alert alert-success alert-dismissible fade show" role="alert">
+      <strong>Success:</strong> {{ success }}
+      <button type="button"
+              class="btn-close"
+              data-bs-dismiss="alert"
+              aria-label="Close"></button>
+    </div>
+  {% endif %}
   <div class="container-fluid">
     <div class="row">
       <div class="offset-md-1 col-md-10 offset-xl-2 col-xl-8 table-container">
-        <button type="button"
-                class="btn btn-primary btn-sm"
-                data-bs-toggle="modal"
-                data-bs-target="#new-game">New Game</button>
+        <a class="btn btn-primary btn-sm"
+           href='{{ url_for("dashboard_create_game") }}'
+           role="button">New Game</a>
         <table id="games" class="table table-hover table-bordered caption-top">
           <caption>List of Games</caption>
           <thead>
@@ -139,25 +147,6 @@
             {% endfor %}
           </tbody>
         </table>
-      </div>
-    </div>
-  </div>
-  <!-- Modal -->
-  <div class="modal fade" id="new-game" tabindex="-1" aria-hidden="true">
-    <div class="modal-dialog">
-      <div class="modal-content">
-        <div class="modal-header">
-          <h1 class="modal-title fs-5" id="exampleModalLabel">Create New Game</h1>
-          <button type="button"
-                  class="btn-close"
-                  data-bs-dismiss="modal"
-                  aria-label="Close"></button>
-        </div>
-        <div class="modal-body">...</div>
-        <div class="modal-footer">
-          <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-          <button type="button" class="btn btn-primary">Create</button>
-        </div>
       </div>
     </div>
   </div>
