--- a/prijateli_tree/app/templates/end_of_game.html
+++ b/prijateli_tree/app/templates/end_of_game.html
@@ -7,12 +7,12 @@ End of Game
 
   The bag the computer chose was  {{ correct_color }} <!--correct_color ... -->
   and you guessed  {{ player_guess }}. <!--player_guess ... -->
-
     <br>
     <br>
-
 {% if is_correct %} 100  {% else %} 0 {% endif %} points will be added to your final reward!
+    <br>
+    <br>
+<a href="{{ url_for('view_round', player_id=player_id, game_id=game_id) }}">Next</a></p>
 
-<a href="{{ url_for('view_round', player_id={{ player_id }}, game_id = {{ game_id }}) }}">Next</a></p>
 
 {% endblock content %}
