--- a/prijateli_tree/app/templates/end_of_game.html
+++ b/prijateli_tree/app/templates/end_of_game.html
@@ -23,7 +23,7 @@ and you guessed  {{ player_guess }}.
 points will be added to your final reward!
 <br>
 <br>
-<a href="{{ url_for('view_round', player_id=player_id, game_id=game_id) }}">Next</a></p>
+<a href="{{ url_for('view_round', player_id=player_id, game_id=game_id) }}">Next</a>
 
 
 {% endblock content %}
