--- a/prijateli_tree/app/templates/end_of_game.html
+++ b/prijateli_tree/app/templates/end_of_game.html
@@ -5,19 +5,19 @@
 {% block content %}
   <h1>
     {% if is_correct %}
-     {{ game_results.you_won }}
+     {{ text.game_results.you_won }}
     {% else %}
-      {{ game_results.better_luck }}
+      {{ text.game_results.better_luck }}
     {% endif %}
   </h1>
 
   {% if correct_color == "B" %}
 
-  {{ game_results.the_computer_chose_blue }}
+  {{ text.game_results.the_computer_chose_blue }}
 
   {% else %}
 
-  {{ game_results.the_computer_chose_red }}
+  {{ text.game_results.the_computer_chose_red }}
 
   {% endif %}
 
@@ -34,7 +34,7 @@
   <br>
   <br>
 
-  {{ real_game_intro.added_points | replace('{X}', points) }}
+  {{ text.real_game_intro.added_points | replace('{X}', points) }}
 
   <br>
   <br>
