--- a/prijateli_tree/app/templates/round.html
+++ b/prijateli_tree/app/templates/round.html
@@ -3,4 +3,17 @@
   PrijateliTree - View Round
 {% endblock title %}
 {% block content %}
+  <div>
+    <h1>Round: {{ current_round }}</h1>
+    {% if first_round %}
+      <p>Your Ball: {{ ball }}</p>
+    {% else %}
+      <h2>Your Previous Guesses</h2>
+      <ul>
+        {% for answer in previous_answers %}
+          <li>{{ answer }}</li>
+        {% endfor %}
+      </ul>
+    {% endif %}
+  </div>
 {% endblock content %}
