Changes in template to access json values

--- a/prijateli_tree/app/templates/round.html
+++ b/prijateli_tree/app/templates/round.html
@@ -8,9 +8,14 @@
     {% if first_round %}
       <p>Your Ball: {{ ball }}</p>
     {% else %}
-      <h2>Your Previous Guesses</h2>
+      <h2>Your Previous Guess</h2>
+      <p>{{ previous_answers.your_previous_answer }}</p>
+
+      <h2>Neighbors' Previous Answers</h2>
       <ul>
-        {% for answer in previous_answers %}<li>{{ answer }}</li>{% endfor %}
+        {% for neighbor_answer in previous_answers.neighbors_previous_answer %}
+          <li>{{ neighbor_answer }}</li>
+        {% endfor %}
       </ul>
     {% endif %}
   </div>
