--- a/prijateli_tree/app/templates/ready.html
+++ b/prijateli_tree/app/templates/ready.html
@@ -7,7 +7,7 @@
     <h1>Get Ready to Play</h1>
     <h2 style="color:red;">Red</h2>
     <h3>or</h3>
-    <h2 style="color:blue;">Blue!</h2>
+    <h2 style="color:#007bff;">Blue!</h2>
   </div>
   <form class="row"
         method="post"
