Trailing spaces and linting, change url

--- a/prijateli_tree/app/templates/ready.html
+++ b/prijateli_tree/app/templates/ready.html
@@ -11,7 +11,7 @@
   </div>
   <form class="row"
         method="post"
-        action='/ready'
+        action='{{ url_for("player_ready") }}'
         style="display: flex;
                justify-content: center">
     <button class="btn icon-right waves-effect waves-light"
