--- a/prijateli_tree/app/static/css/custom.css
+++ b/prijateli_tree/app/static/css/custom.css
@@ -22,6 +22,7 @@ tr.empty-table {
     text-align: center;
 }
 
-.extra-top-margin {
+.general-container {
     margin-top: 30px;
+    text-align: center;
 }
