--- a/prijateli_tree/app/templates/home_page.html
+++ b/prijateli_tree/app/templates/home_page.html
@@ -3,7 +3,7 @@
   PrijateliTree - Introduction Page
 {% endblock title %}
 {% block content %}
-  <div class="container-sm text-center extra-top-margin">
+  <div class="container-sm general-container">
     <h1>Welcome to the PrijateliTree application!</h1>
     <p>If you are attempting to access a particular game, please reach out to your game coordinator.</p>
     <p>
