Add home page to application (#55)
## Describe Your Changes
Added home page and base container class for the rest of the application
pages.

## Checklist Before Requesting a Review
- [x] The code runs successfully.

```commandline
2023-11-20 19:44:28 prijatelitree-web-1       | INFO:     192.168.65.1:63481 - "GET /css/bootstrap.min.css.map HTTP/1.1" 200 OK
2023-11-20 19:44:29 prijatelitree-web-1       | INFO:     192.168.65.1:63481 - "GET / HTTP/1.1" 200 OK
2023-11-20 19:44:29 prijatelitree-web-1       | INFO:     192.168.65.1:63481 - "GET /css/bootstrap.min.css HTTP/1.1" 200 OK
2023-11-20 19:44:29 prijatelitree-web-1       | INFO:     192.168.65.1:63483 - "GET /js/dataTables.bootstrap5.min.js HTTP/1.1" 200 OK
2023-11-20 19:44:29 prijatelitree-web-1       | INFO:     192.168.65.1:63484 - "GET /css/custom.css HTTP/1.1" 200 OK
2023-11-20 19:44:29 prijatelitree-web-1       | INFO:     192.168.65.1:63485 - "GET /js/jquery.dataTables.min.js HTTP/1.1" 200 OK
2023-11-20 19:44:29 prijatelitree-web-1       | INFO:     192.168.65.1:63482 - "GET /js/jquery-3.6.0.min.js HTTP/1.1" 200 OK
2023-11-20 19:44:29 prijatelitree-web-1       | INFO:     192.168.65.1:63486 - "GET /js/bootstrap.bundle.min.js HTTP/1.1" 200 OK
2023-11-20 19:44:29 prijatelitree-web-1       | INFO:     192.168.65.1:63481 - "GET /images/logo.png HTTP/1.1" 200 OK
2023-11-20 19:44:29 prijatelitree-web-1       | INFO:     192.168.65.1:63481 - "GET /js/bootstrap.bundle.min.js.map HTTP/1.1" 404 Not Found
2023-11-20 19:44:29 prijatelitree-web-1       | INFO:     192.168.65.1:63481 - "GET /css/bootstrap.min.css.map HTTP/1.1" 200 OK
```

<img width="1470" alt="Screenshot 2023-11-20 at 7 43 25 PM"
src="https://github.com/prijatelilab/PrijateliTree/assets/5885605/261518b1-ad5e-49fe-b6d9-98d30f44dada">

--- a/prijateli_tree/app/static/css/custom.css
+++ b/prijateli_tree/app/static/css/custom.css
@@ -21,3 +21,8 @@ div.table-container a.btn {
 tr.empty-table {
     text-align: center;
 }
+
+.general-container {
+    margin-top: 30px;
+    text-align: center;
+}
