Put container around elements

--- a/prijateli_tree/app/templates/ready.html
+++ b/prijateli_tree/app/templates/ready.html
@@ -3,7 +3,7 @@
   PrijateliTree - Game Start
 {% endblock title %}
 {% block content %}
-  <div style="text-align: center;">
+  <div class="container-sm general-container">
     <h1>Get Ready to Play</h1>
     <h2 style="color:red;">Red</h2>
     <h3>or</h3>
