--- a/prijateli_tree/app/templates/round.html
+++ b/prijateli_tree/app/templates/round.html
@@ -3,7 +3,7 @@
   PrijateliTree - View Round
 {% endblock title %}
 {% block content %}
-  <div style="text-align: center;">
+  <div class="container-sm general-container">
     <h1 style="margin-bottom: 30px;">Round: {{ current_round }}</h1>
     {% if first_round %}
       <p style="font-size: 24px; margin-bottom: 20px;">
