--- a/prijateli_tree/app/templates/waiting.html
+++ b/prijateli_tree/app/templates/waiting.html
@@ -3,5 +3,7 @@
   PrijateliTree - Waiting
 {% endblock title %}
 {% block content %}
-  <h1>Waiting for other players...</h1>
+  <div class="container-sm general-container">
+    <h1>Waiting for other players...</h1>
+  </div>
 {% endblock content %}
