#53 waiting in local languages

--- a/prijateli_tree/app/templates/waiting.html
+++ b/prijateli_tree/app/templates/waiting.html
@@ -26,6 +26,6 @@ setInterval(function() { check_all_set();}, 5000);
   PrijateliTree - Waiting
 {% endblock title %}
 {% block content %}
-  <h1>Waiting for other players...</h1>
+  <h1>{{ text.waiting_screen.waiting }}</h1>
   <div class="spin-loader"></div>
 {% endblock content %}
