--- a/prijateli_tree/app/templates/round.html
+++ b/prijateli_tree/app/templates/round.html
@@ -34,9 +34,9 @@
           {% set neighbor_name = previous_answers.neighbors_names[loop.index-1] %}
           <li style="font-size: 24px; margin-bottom: 20px;">
             {% if neighbor_answer == 'R' %}
-              <span class="red_color">{{ neighbor_name }} - Red</span>
+             <span>{{ neighbor_name }}: </span><span class="red_color">Red</span>
             {% elif neighbor_answer == 'B' %}
-              <span class="blue_color">{{ neighbor_name }} - Blue</span>
+            <span>{{ neighbor_name }}: </span><span class="blue_color">Blue</span>
             {% else %}
               {{ neighbor_answer }}
             {% endif %}
