Add dummy buttons

--- a/prijateli_tree/app/templates/round.html
+++ b/prijateli_tree/app/templates/round.html
@@ -44,5 +44,9 @@
         {% endfor %}
       </ul>
     {% endif %}
+    <!-- Dummy buttons -->
+    <h2 style="margin-bottom: 20px">Choose a color</h2>
+    <button type="submit" class="btn btn-danger">Red</button>
+    <button type="submit" class="btn btn-primary">Blue</button>
   </div>
 {% endblock content %}
