--- a/prijateli_tree/app/static/css/custom.css
+++ b/prijateli_tree/app/static/css/custom.css
@@ -28,19 +28,19 @@ tr.empty-table {
 }
 
 .red_text {
-    color: red;
+    color: red-500;
     font-size: 24px;
 }
 
 .blue_text {
-    color: #007bff;
+    color: blue-500;
     font-size: 24px;
 }
 
 .red_color {
-    color: red;
+    color: red-500;
 }
 
 .blue_color {
-    color: #007bff;
+    color: blue-500;
 }
