--- a/prijateli_tree/app/static/css/custom.css
+++ b/prijateli_tree/app/static/css/custom.css
@@ -28,19 +28,19 @@ tr.empty-table {
 }
 
 .red_text {
-    color: red-500;
+    color: #dc3545;
     font-size: 24px;
 }
 
 .blue_text {
-    color: blue-500;
+    color: #0d6efd;
     font-size: 24px;
 }
 
 .red_color {
-    color: red-500;
+    color: #dc3545;
 }
 
 .blue_color {
-    color: blue-500;
+    color: #0d6efd;
 }
