--- a/prijateli_tree/app/templates/waiting.html
+++ b/prijateli_tree/app/templates/waiting.html
@@ -20,6 +20,8 @@
   PrijateliTree - Waiting
 {% endblock title %}
 {% block content %}
-  <h1>{{ text.waiting_screen.waiting }}</h1>
-  <div class="spin-loader"></div>
+  <div class="container-sm general-container">
+    <h1>{{ text.waiting_screen.waiting }}</h1>
+    <div class="spin-loader"></div>
+  </div>
 {% endblock content %}
