Add wait screen logic (#57)
## Describe Your Changes
Add waiting screen to ensure all players have submitted a guess before
moving on.

## Checklist Before Requesting a Review
- [x] The code runs successfully.

```commandline
2023-11-21 16:09:35 INFO:     172.20.0.1:54546 - "GET /games/4/player/11/waiting HTTP/1.1" 200 OK
2023-11-21 16:09:35 INFO:     172.20.0.1:54546 - "GET /games/4/player/static/images/logo.png HTTP/1.1" 404 Not Found
2023-11-21 16:09:35 INFO:     172.20.0.1:54554 - "GET /css/custom.css HTTP/1.1" 304 Not Modified
2023-11-21 16:09:35 INFO:     172.20.0.1:54554 - "GET /games/4/player/static/images/logo.png HTTP/1.1" 404 Not Found
2023-11-21 16:09:40 INFO:     172.20.0.1:35802 - "GET /games/4/all_set HTTP/1.1" 200 OK
2023-11-21 16:09:46 INFO:     172.20.0.1:35818 - "GET /games/4/all_set HTTP/1.1" 200 OK
2023-11-21 16:09:51 INFO:     172.20.0.1:39146 - "GET /games/4/all_set HTTP/1.1" 200 OK
```

---------

Co-authored-by: michplunkett <5885605+michplunkett@users.noreply.github.com>

--- a/prijateli_tree/app/templates/waiting.html
+++ b/prijateli_tree/app/templates/waiting.html
@@ -1,9 +1,27 @@
 {% extends "base.html" %}
+{% block helper_script %}
+  <script>
+    <!--calls wait again after 5 seconds-->
+    async function check_all_set() {
+      const response = await fetch("/games/{{game_id}}/all_set");
+      const all_set = await response.json();
+
+      if (all_set.ready) {
+        window.location.href = "/games/{{game_id}}/player/{{player_id}}/round";
+      } else {
+        console.log("Other players are not ready, restarting the wait cycle.")
+      }
+    }
+
+    setInterval(function() { check_all_set();}, 5000);
+  </script>
+{% endblock helper_script %}
 {% block title %}
   PrijateliTree - Waiting
 {% endblock title %}
 {% block content %}
   <div class="container-sm general-container">
-    <h1>Waiting for other players...</h1>
+    <h1>{{ text.waiting_screen.waiting }}</h1>
+    <div class="spin-loader"></div>
   </div>
 {% endblock content %}
