--- a/prijateli_tree/app/static/css/custom.css
+++ b/prijateli_tree/app/static/css/custom.css
@@ -26,3 +26,71 @@ tr.empty-table {
     margin-top: 30px;
     text-align: center;
 }
+
+
+
+
+/* Waiting spinner */
+/* credit: https://dribbble.com/shots/1756041-Spinning-CSS-Loader */
+
+:root {
+    --spinner-speed: 0.675s;
+    --spinner-radius: 80%;
+    --spinner-fill-radius: 90px;
+    --spinner-size: 100px;
+    --spinner-thickness: 10px;
+    --spinner-inner-circle: calc(var(--spinner-size) - var(--spinner-thickness));
+    --spinner-color: #005041;
+    --spinner-bg: #26A69A;
+    --spinner-inner-bg: #000101;
+  }
+
+  /* Define .spin-loader class */
+  .spin-loader {
+    border-radius: var(--spinner-radius);
+    display: block;
+    height: var(--spinner-size);
+    width: var(--spinner-size);
+    position: relative;
+    animation: spin var(--spinner-speed) linear 0s infinite normal;
+    background: var(--spinner-bg);
+
+    /* Pseudo-elements for the left half and the inner circle */
+    &::before,
+    &::after {
+      content: "";
+      display: block;
+      position: absolute;
+    }
+
+    /* Styles for the left half of the spinner */
+    &::before {
+      border-radius: 0 var(--spinner-fill-radius) var(--spinner-fill-radius) 0;
+      height: var(--spinner-size);
+      width: 50%;
+      top: 0;
+      right: 0;
+      z-index: 1;
+      background: var(--spinner-color);
+      background-image: linear-gradient(var(--spinner-bg), var(--spinner-color));
+    }
+
+    /* Styles for the inner circle of the spinner */
+    &::after {
+      border-radius: var(--spinner-radius);
+      height: var(--spinner-inner-circle);
+      width: var(--spinner-inner-circle);
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+      z-index: 1;
+      background: var(--spinner-inner-bg);
+    }
+  }
+
+  /* Define keyframes for the spin animation */
+  @keyframes spin {
+    to {
+      transform: rotate(360deg);
+    }
+  }
